--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" ng-app="myApp">
 <head>
   <meta charset="UTF-8">
   <title>day #</title>
@@ -7,8 +7,13 @@
   <link rel="stylesheet" href="css/anotherstyle.css">
 </head>
 <body>
-
+  <ng-view></ng-view>
 <!--  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>-->
+  <script src="js/lib/angular/angular.min.js"></script>
+  <script src="js/lib/angular/angular-route.min.js"></script>
+  <script src="js/app.js"></script>
+  <script src="js/controllers/controller.js"></script>
+
 
 </body>
 </html>
