--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -1,19 +1,15 @@
 <!doctype html>
-<html lang="en" ng-app="myApp">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>day #</title>
-  <link rel="stylesheet" href="css/myStyle.css">
-  <link rel="stylesheet" href="css/anotherstyle.css">
+    <meta charset="UTF-8">
+    <title>Document</title>
+
 </head>
-<body>
-  <ng-view></ng-view>
-<!--  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>-->
-  <script src="js/lib/angular/angular.min.js"></script>
-  <script src="js/lib/angular/angular-route.min.js"></script>
-  <script src="js/app.js"></script>
-  <script src="js/controllers/controller.js"></script>
+<body ng-app="myApp">
+<ng-view></ng-view>
 
-
+<script src="js/lib/angular/angular.min.js"></script>
+<script src="js/lib/angular/angular-route.min.js"></script>
+<script src="js/app.js"></script>
 </body>
 </html>
